# Strainpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Strainpp.pro  Strainpp.rc  axesresource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
Plotting/: colorbarplot.h  imageplot.h
ReadDM/: dmreader.h  streamreader.h  tagreader.h
Strain/: gpa.cpp  gpa.h  phase.cpp  phase.h
Utils/: exceptions.cpp  exceptions.h  matrix-operations.h  matrix.h  ransac.h  regression.h  utils.h
cmake/modules/: FindEigen3.cmake  FindFFTW.cmake  FindQCustomPlot.cmake
docs/: _config.yml  index.md  manual.md  theory.md
docs/_data/: colours.yml  images.yml  navigation.yml  releases.yml
scripts/create_installer/: README.md  inno_installer_script.iss  make_installer.py
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  strainpp.pro  strainpp.rc  version.cmake  versiondialog.cpp  versiondialog.h
src/Plotting/: colorbarplot.h  imageplot.h
src/ReadDM/: dmreader.h  dmutils.h  streamreader.h  tagreader.h
src/Strain/: gpa.cpp  gpa.h  phase.cpp  phase.h
src/Utils/: coord.h  exceptions.h  utils.h
